deployment/gke/edge-orchestrator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 2
  labels:
    app: edge-orchestrator
  name: edge-orchestrator
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: edge-orchestrator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: edge-orchestrator
    spec:
      containers:
      - name: edge-orchestrator-qq52d
        image: europe-west1-docker.pkg.dev/acn-gcp-octo-sas/airbus-test/edge_orchestrator:0.5.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - name: service-account-credentials-volume
            mountPath: /etc/gcp
            readOnly: true
#        readinessProbe:
#          httpGet:
#            port: 8000
#            path: /
#          initialDelaySeconds: 30
#          periodSeconds: 5
#        livenessProbe:
#          httpGet:
#            port: 8000
#            path: /
#          initialDelaySeconds: 30
#          periodSeconds: 5
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: service-account-credentials-volume
          secret:
            secretName: service-account-credentials
            items:
              - key: sa_json
                path: sa_credentials.json
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2023-02-07T09:39:45Z"
    lastUpdateTime: "2023-02-07T09:39:53Z"
    message: ReplicaSet "edge-orchestrator-8544f4fd54" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-02-17T18:17:40Z"
    lastUpdateTime: "2023-02-17T18:17:40Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
