deployment/gke/edge-orchestrator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-vio-lb
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: api-vio-airbus-ip
    networking.gke.io/managed-certificates: api-vio
    cloud.google.com/backend-config: '{"default": "health-check-config"}'
spec:
  defaultBackend:
    service:
      name: api-service
      port:
        number: 8000
status:
  loadBalancer: {}
